[gd_scene load_steps=2 format=3 uid="uid://bpya62t6qls8v"]

[ext_resource type="Script" path="res://scripts/debug/debug_overlay.gd" id="1_a25g2"]

[node name="DebugOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a25g2")

[node name="MousePositionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_right = 42.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Mouse Pos"

[node name="PlayerState" type="Label" parent="."]
layout_mode = 2
offset_right = 40.0
offset_bottom = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
